add fonts and buttons

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Home</title>
+    <title>Portfolio | About me</title>
     <link rel="icon" href="images/Logo.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="home-page">
+  <body class="about-page">
     <header>
       <div class="container">
         <nav>
@@ -28,13 +28,10 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="hero-section"></section>
+    </main>
     <footer></footer>
-    <div class="preloader">
-      <span class="loader">Anastasiia Saienko</span>
-    </div>
-    <div id="petals-container"></div>
-    <script src="js/script.js"></script>
     <script src="js/activ.js"></script>
   </body>
 </html>
