added fonts and created about.html

--- a/about.html
+++ b/about.html
@@ -29,7 +29,68 @@
       </div>
     </header>
     <main>
-      <section class="hero-section"></section>
+      <section>
+        <div class="container">
+          <div class="center"><h1>ABOUT ME</h1></div>
+          <div class="about">
+            <div class="aboutme1">
+              <div class="text-about">
+                <h2>A little about me</h2>
+                <p>
+                  My name is Anastasiia Saienko, and I believe that the
+                  combination of creativity and technology has the power to
+                  change the world. I’m 16 years old, originally from
+                  Zaporizhzhia, Ukraine, and now I live in Switzerland, in a
+                  small but picturesque village called Mühlau. My biggest dream
+                  is to become a programmer so I can create something of my own
+                  just like this portfolio website you’re reading right now.
+                </p>
+              </div>
+              <div class="image">
+                <img src="images/profil-photo.jpg" />
+              </div>
+            </div>
+          </div>
+          <div class="about">
+            <div class="image-small">
+              <img src="images/profil-photo3.jpg" />
+              <div class="photo2"><img src="images/profil-photo2.jpg" /></div>
+            </div>
+
+            <div class="text-about">
+              <h2>Hobbys</h2>
+              <p>
+                I have been playing the violin for 11 years. Two years ago, I
+                graduated from music school, but I still continue to play and
+                even take part in the Jugendorchester Freiamt (Künstlerhaus
+                Boswil) orchestra.
+In winter, I love snowboarding - I really
+                enjoy riding down red slopes and freestyle tracks. I can also
+                ski, but I like snowboarding much more. My family and friends
+                say that it even suits my character better.
+              </p>
+            </div>
+          </div>
+          <div class="about">
+            <div class="aboutme1">
+              <div class="text-about">
+                <h2>Moving to Switzerland</h2>
+                <p>
+                  Very suddenly and unexpectedly, I moved to Switzerland in
+                  March 2022 because of the war in my country. Right after
+                  arriving, I started learning German from scratch, and my
+                  adaptation to the new country went quite smoothly, thanks to
+                  the fact that I already spoke English, which greatly helped me
+                  communicate with others.
+                </p>
+              </div>
+              <div class="image">
+                <img src="images/profil-photo4.jpg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="js/activ.js"></script>
